darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_array_string_with_pattern_and_array_constraints.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"string(pattern(^[a-z]+$))[](min(1); max(5); unique)\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "items": {
        "pattern": "^[a-z]+$",
        "type": "string"
      },
      "maxItems": 5,
      "minItems": 1,
      "type": "array",
      "uniqueItems": true
    }
  },
  "type": "object"
}
