darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_array_with_description.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"string[] -> A list of tags\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "description": "A list of tags",
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  },
  "type": "object"
}
