darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_date.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"date\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "format": "date",
      "type": "string"
    }
  },
  "type": "object"
}
