darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_datetime.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
assertion_line: 65
expression: "convert_atom(\"datetime\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "format": "date-time",
          "type": "string"
        }
      ]
    }
  },
  "type": "object"
}
