darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_email.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"email\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "format": "email",
      "type": "string"
    }
  },
  "type": "object"
}
