darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_enum_members.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"enum(red, green, blue)\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "enum": [
        "red",
        "green",
        "blue"
      ]
    }
  },
  "type": "object"
}
