darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_file_bare.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
assertion_line: 105
expression: "convert_atom(\"file\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "anyOf": [
        {
          "const": ""
        },
        {
          "format": "darkmatter-file",
          "type": "string"
        }
      ]
    }
  },
  "type": "object"
}
