darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_file_match.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"file(match('*.md', '!_*.md'))\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "format": "darkmatter-file",
      "type": "string",
      "x-darkmatter-match": [
        "*.md",
        "!_*.md"
      ]
    }
  },
  "type": "object"
}
